extends Node

@onready var crusher_smash: AudioStreamPlayer = $CrusherSmash
@onready var explosion: AudioStreamPlayer = $Explosion
@onready var get_gear: AudioStreamPlayer = $GetGear
@onready var jet_pack: AudioStreamPlayer = $JetPack
@onready var jump: AudioStreamPlayer = $Jump
@onready var land: AudioStreamPlayer = $Land
@onready var take_damage: AudioStreamPlayer = $TakeDamage
@onready var calm_song: AudioStreamPlayer = $CalmSong
@onready var aggressive_song: AudioStreamPlayer = $AggressiveSong
@onready var rejected: AudioStreamPlayer = $Rejected
